[gd_scene load_steps=3 format=2]

[ext_resource path="res://asset/gui/settings_menu1.theme" type="Theme" id=1]
[ext_resource path="res://asset/gui/setting_menu.gd" type="Script" id=2]

[node name="Setting" type="Popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -80.0
margin_right = 160.0
margin_bottom = 80.0
rect_min_size = Vector2( 320, 160 )
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.188235, 0.760784, 0.0666667, 1 )

[node name="SettingTab" type="TabContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
tab_align = 0

[node name="Video" type="Tabs" parent="SettingTab"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 24.0

[node name="MarginContainer" type="MarginContainer" parent="SettingTab/Video"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25

[node name="SettingVideo" type="GridContainer" parent="SettingTab/Video/MarginContainer"]
margin_left = 25.0
margin_top = 25.0
margin_right = 295.0
margin_bottom = 135.0
custom_constants/vseparation = 20
columns = 2

[node name="VideoDisplay" type="Label" parent="SettingTab/Video/MarginContainer/SettingVideo"]
margin_right = 93.0
margin_bottom = 19.0
text = "Display Mode"

[node name="OptionButton" type="OptionButton" parent="SettingTab/Video/MarginContainer/SettingVideo"]
margin_left = 180.0
margin_right = 270.0
margin_bottom = 19.0
size_flags_horizontal = 10
text = "Windowed"
items = [ "Windowed", null, false, 0, null, "Fullscreen", null, false, 1, null ]
selected = 0

[node name="Vsync" type="Label" parent="SettingTab/Video/MarginContainer/SettingVideo"]
margin_top = 45.0
margin_right = 93.0
margin_bottom = 64.0
text = "Vsync"

[node name="VsyncButton" type="CheckButton" parent="SettingTab/Video/MarginContainer/SettingVideo"]
margin_left = 97.0
margin_top = 39.0
margin_right = 270.0
margin_bottom = 71.0

[node name="Brightness" type="Label" parent="SettingTab/Video/MarginContainer/SettingVideo"]
margin_top = 91.0
margin_right = 93.0
margin_bottom = 110.0
text = "Brightness"

[node name="BrightnessSlider" type="HSlider" parent="SettingTab/Video/MarginContainer/SettingVideo"]
margin_left = 100.0
margin_top = 91.0
margin_right = 270.0
margin_bottom = 110.0
rect_min_size = Vector2( 170, 0 )
size_flags_horizontal = 10
size_flags_vertical = 1
max_value = 2.0
step = 0.1
value = 1.0

[node name="Audio" type="Tabs" parent="SettingTab"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 24.0

[node name="MarginContainer" type="MarginContainer" parent="SettingTab/Audio"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25

[node name="SettingAudio" type="GridContainer" parent="SettingTab/Audio/MarginContainer"]
margin_left = 25.0
margin_top = 25.0
margin_right = 305.0
margin_bottom = 122.0
custom_constants/vseparation = 20
columns = 2

[node name="MasterVol" type="Label" parent="SettingTab/Audio/MarginContainer/SettingAudio"]
margin_right = 106.0
margin_bottom = 19.0
text = "Master Volume"

[node name="VolSlider" type="HSlider" parent="SettingTab/Audio/MarginContainer/SettingAudio"]
margin_left = 110.0
margin_right = 280.0
margin_bottom = 19.0
rect_min_size = Vector2( 170, 0 )
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = -50.0
max_value = 0.0
value = -10.0

[node name="MusicVol" type="Label" parent="SettingTab/Audio/MarginContainer/SettingAudio"]
margin_top = 39.0
margin_right = 106.0
margin_bottom = 58.0
text = "Music Volume"

[node name="MusicSlider" type="HSlider" parent="SettingTab/Audio/MarginContainer/SettingAudio"]
margin_left = 110.0
margin_top = 39.0
margin_right = 280.0
margin_bottom = 58.0
rect_min_size = Vector2( 170, 0 )
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = -50.0
max_value = 0.0
value = -10.0

[node name="SfxVol" type="Label" parent="SettingTab/Audio/MarginContainer/SettingAudio"]
margin_top = 78.0
margin_right = 106.0
margin_bottom = 97.0
text = "SFX Volume"

[node name="SfxSlider" type="HSlider" parent="SettingTab/Audio/MarginContainer/SettingAudio"]
margin_left = 110.0
margin_top = 78.0
margin_right = 280.0
margin_bottom = 97.0
rect_min_size = Vector2( 170, 0 )
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = -50.0
max_value = 0.0
value = -10.0

[connection signal="item_selected" from="SettingTab/Video/MarginContainer/SettingVideo/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="toggled" from="SettingTab/Video/MarginContainer/SettingVideo/VsyncButton" to="." method="_on_CheckButton_toggled"]
[connection signal="value_changed" from="SettingTab/Video/MarginContainer/SettingVideo/BrightnessSlider" to="." method="_on_BrightnessSlider_value_changed"]
[connection signal="value_changed" from="SettingTab/Audio/MarginContainer/SettingAudio/VolSlider" to="." method="_on_VolSlider_value_changed"]
[connection signal="value_changed" from="SettingTab/Audio/MarginContainer/SettingAudio/MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="value_changed" from="SettingTab/Audio/MarginContainer/SettingAudio/SfxSlider" to="." method="_on_SfxSlider_value_changed"]
